[tool.poetry]
name = "vscode-debug-specs-python"
version = "1.0.0"
description = ""
authors = ["74th <site@74th.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
ptvsd = "^4.3.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
